# alchemy

./: .gitattributes  .gitignore  README.md  cover.html  package.json
.github/workflows/: ci.yml  release.yml
mcp/: ALCHEMY.md  README.md  package-lock.json  package.json  server.js
python/: README.md  pyproject.toml
python/src/alchemy_writing/: __init__.py  cli.py
scripts/: sync-rules.mjs
